// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calculate simulations-dividendes > barème couple 2 enfants 1`] = `
"bénéficiaire . dividendes . bruts: 200
bénéficiaire . dividendes . cotisations et contributions: 34
bénéficiaire . dividendes . imposables: 106
bénéficiaire . dividendes . nets d'impôt: 166
impôt . montant: 0
impôt . revenu imposable: 106
impôt . taux d'imposition: 0"
`;

exports[`calculate simulations-dividendes > barème couple 2 enfants 2`] = `
"bénéficiaire . dividendes . bruts: 20000000
bénéficiaire . dividendes . cotisations et contributions: 3440000
bénéficiaire . dividendes . imposables: 10640000
bénéficiaire . dividendes . nets d'impôt: 11421516
impôt . montant: 5138484
impôt . revenu imposable: 10640000
impôt . taux d'imposition: 48"
`;

exports[`calculate simulations-dividendes > barème couple 2 enfants 3`] = `
"bénéficiaire . dividendes . bruts: 200
bénéficiaire . dividendes . cotisations et contributions: 34
bénéficiaire . dividendes . imposables: 106
bénéficiaire . dividendes . nets d'impôt: 115
impôt . montant: 37
impôt . revenu imposable: 106
impôt . taux d'imposition: 35"
`;

exports[`calculate simulations-dividendes > barème couple 2 enfants 4`] = `
"bénéficiaire . dividendes . bruts: 20000
bénéficiaire . dividendes . cotisations et contributions: 3440
bénéficiaire . dividendes . imposables: 10640
bénéficiaire . dividendes . nets d'impôt: 14860
impôt . montant: 475
impôt . revenu imposable: 10640
impôt . taux d'imposition: 4"
`;

exports[`calculate simulations-dividendes > barème défauts 1`] = `
"bénéficiaire . dividendes . bruts: 200
bénéficiaire . dividendes . cotisations et contributions: 34
bénéficiaire . dividendes . imposables: 106
bénéficiaire . dividendes . nets d'impôt: 166
impôt . montant: 0
impôt . revenu imposable: 106
impôt . taux d'imposition: 0"
`;

exports[`calculate simulations-dividendes > barème défauts 2`] = `
"bénéficiaire . dividendes . bruts: 20000000
bénéficiaire . dividendes . cotisations et contributions: 3440000
bénéficiaire . dividendes . imposables: 10640000
bénéficiaire . dividendes . nets d'impôt: 11382167
impôt . montant: 5177833
impôt . revenu imposable: 10640000
impôt . taux d'imposition: 49"
`;

exports[`calculate simulations-dividendes > barème défauts 3`] = `
"bénéficiaire . dividendes . bruts: 200
bénéficiaire . dividendes . cotisations et contributions: 34
bénéficiaire . dividendes . imposables: 106
bénéficiaire . dividendes . nets d'impôt: 113
impôt . montant: 45
impôt . revenu imposable: 106
impôt . taux d'imposition: 42"
`;

exports[`calculate simulations-dividendes > barème défauts 4`] = `
"bénéficiaire . dividendes . bruts: 20000
bénéficiaire . dividendes . cotisations et contributions: 3440
bénéficiaire . dividendes . imposables: 10640
bénéficiaire . dividendes . nets d'impôt: 13368
impôt . montant: 1993
impôt . revenu imposable: 10640
impôt . taux d'imposition: 19"
`;

exports[`calculate simulations-dividendes > pfu 1`] = `
"bénéficiaire . dividendes . bruts: 200
bénéficiaire . dividendes . cotisations et contributions: 37
bénéficiaire . dividendes . imposables: 120
bénéficiaire . dividendes . nets d'impôt: 137
impôt . montant: 26
impôt . revenu imposable: 120
impôt . taux d'imposition: null"
`;

exports[`calculate simulations-dividendes > pfu 2`] = `
"bénéficiaire . dividendes . bruts: 20000000
bénéficiaire . dividendes . cotisations et contributions: 3720000
bénéficiaire . dividendes . imposables: 12000000
bénéficiaire . dividendes . nets d'impôt: 13720000
impôt . montant: 2560000
impôt . revenu imposable: 12000000
impôt . taux d'imposition: null"
`;
